[package]
name = "idfk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
reqwest = "0.11.20"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
log = { version = "0.4.20", features = [] }
env_logger = "0.10.0"
url = "2.4.1"
async-trait = "0.1.73"
futures = "0.3.28"
regex = "1.9.5"
enum-iterator = "1.4.1"
bytes = "1.5.0"
mime = "0.3.17"
encoding_rs = "0.8.33"

[build-dependencies]
regex = "1.9.5"
lazy_static = "1.4.0"
indoc = "2.0.4"
